<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preferences_vue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".présentation.vue.Preferences">

    <!-- Constraint pour afficher le titre du View preferences -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPreferencesTexte"
        android:layout_width="410dp"
        android:layout_height="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/texteTitrePreferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend"
            android:text="@string/mes_pr_f_rences"
            android:textColor="@color/couleur_principale"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.827" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Constraint pour afficher les langues a choisir -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPreferencesLangues"
        android:layout_width="410dp"
        android:layout_height="237dp"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/texteLanguePrefere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/lexend"
            android:text="@string/langue_pr_f_r_e"
            android:textColor="@color/couleur_principale"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <!-- RadioGroup to group the RadioButtons -->
        <RadioGroup
            android:id="@+id/radioGroupLangues"
            android:layout_width="371dp"
            android:layout_height="149dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texteLanguePrefere">

            <RadioButton
                android:id="@+id/radioButtonFrancais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend"
                android:text="@string/fran_ais"
                android:textColor="@color/couleur_principale"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="42dp" />

            <RadioButton
                android:id="@+id/radioButtonAnglais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend"
                android:text="@string/anglais"
                android:textColor="@color/couleur_principale"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="90dp" />

            <RadioButton
                android:id="@+id/radioButtonEspagnol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend"
                android:text="@string/espagnol"
                android:textColor="@color/couleur_principale"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="137dp" />
        </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Constraint pour btn -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBtnRechercher"
        android:layout_width="406dp"
        android:layout_height="67dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855">

        <Button
            android:id="@+id/btnAccepter"
            android:layout_width="218dp"
            android:layout_height="49dp"
            android:layout_marginBottom="3dp"
            android:backgroundTint="@color/couleur_btn_jaune"
            android:fontFamily="@font/lexend"
            android:text="@string/accepter"
            android:textColor="@color/couleur_principale"
            android:textSize="16sp"
            app:cornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>