<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutBtnInfo"
        android:layout_width="371dp"
        android:layout_height="288dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/fond_bord_arrondis"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lexend"
            android:text="@string/information"
            android:textColor="#2F3969"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/lexend"
            android:text="@string/telephone"
            android:textColor="#2F3969"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:text="@string/prenom_modif"
            android:fontFamily="@font/lexend"
            android:textColor="#2F3969"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.152"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/lexend"
            android:text="@string/num_ro_passeport"
            android:textColor="#2F3969"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.192"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:text="@string/email"
            android:fontFamily="@font/lexend"
            android:textColor="#2F3969"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nom_modif"
            android:textColor="#2F3969"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.143"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:fontFamily="@font/lexend" />

        <TextView
            android:id="@+id/textViewModifierNomReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/lexend"
            android:text="Xavier"
            android:textColor="#2F3969"
            app:layout_constraintBottom_toTopOf="@+id/textViewModifierPrenomReservation"
            app:layout_constraintStart_toStartOf="@+id/textViewModifierPrenomReservation" />

        <TextView
            android:id="@+id/textViewModifierTelephoneReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/lexend"
            android:text="514-238-6734"
            android:textColor="#2F3969"
            app:layout_constraintStart_toStartOf="@+id/textViewModifierEmailReservation"
            app:layout_constraintTop_toBottomOf="@+id/textViewModifierEmailReservation" />

        <TextView
            android:id="@+id/textViewModifierEmailReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/lexend"
            android:text="xavier@gmail.com"
            android:textColor="#2F3969"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textViewModifiernuméroPasseportReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/lexend"
            android:text="1998-09-18"
            android:textColor="#2F3969"
            app:layout_constraintBottom_toTopOf="@+id/textViewModifierEmailReservation"
            app:layout_constraintStart_toStartOf="@+id/textViewModifierEmailReservation" />

        <TextView
            android:id="@+id/textViewModifierPrenomReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/lexend"
            android:text="Garneau"
            android:textColor="#2F3969"
            app:layout_constraintBottom_toTopOf="@+id/textViewModifiernuméroPasseportReservation"
            app:layout_constraintStart_toStartOf="@+id/textViewModifiernuméroPasseportReservation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>